[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/tileset.png" type="Texture" id=1]
[ext_resource path="res://actor/enemies/enemy1.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 240, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 224, 128, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "sleep",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=13]
radius = 7.0

[sub_resource type="CircleShape2D" id=8]
radius = 33.1424

[node name="enemy1" type="Area2D" groups=["enemy"]]
script = ExtResource( 2 )

[node name="anim" type="AnimatedSprite" parent="."]
position = Vector2( 0, -5 )
scale = Vector2( 2, 2 )
frames = SubResource( 6 )
animation = "sleep"
playing = true

[node name="shape" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 2 )
shape = SubResource( 13 )

[node name="detect" type="Area2D" parent="."]
position = Vector2( 0, -4 )
scale = Vector2( 2, 2 )

[node name="shape" type="CollisionShape2D" parent="detect"]
shape = SubResource( 8 )

[connection signal="body_entered" from="." to="." method="_on_enemy1_body_entered"]
[connection signal="body_entered" from="detect" to="." method="_on_detect_body_entered"]
[connection signal="body_exited" from="detect" to="." method="_on_detect_body_exited"]
